adicionado a linhas pelo js e css

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     
     <h2>Lista de Contatos</h2>
     
-    <div id="tabela" >
-        <table cellspacing="0">
+    <div class="tabela-horizontal" >
+        <table id="tablebody" cellspacing="0">
         <thead>
             <tr class="lista">
                 <th>Nome</th>
