verificação de codigo final

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           
         <div class="opcao">
             <input type="radio" name="celtel" required value ="cel"><img src="./imagens/celularverm.png"> 
-            <label for="cel">Celular:</label>
+            <label for="cel">Celular</label>
             <input type="radio" name="celtel" required value ="tel"><img src="./imagens/telefonev1.png"> 
             <label for="tel">Residencial</label> <br>
         </div>
@@ -54,7 +54,7 @@
     </div>
     <div ></div>
     <footer>
-        <p>&copy;EBAC </p>
+        <p>&copy;EBAC</p>
     </footer>
     <script src="script.js"></script>
 </body>
